fix compilation for java 17